syntax = "proto3";
package skills;

service SkillService {
  rpc getById(Id) returns (SkillResponse) {}
  rpc getList(QuerySkill) returns (SkillListResponse) {}
  rpc create(Skill) returns (SkillResponse) {}
  rpc update(Skill) returns (SkillResponse) {}
  rpc delete(Id) returns (DeleteResponse) {}
}
message Skill {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional string name = 7;
}
message QuerySkill {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional string name = 7;
  optional int32 page = 8;
  optional int32 limit = 9;
  optional string sortBy = 10;
  optional string sortOrder = 11;
}
message Id {
  int32 id = 1;
}
message DeleteResponse {
  string message = 1;
}
message SkillResponse {
  string message = 1;
  optional int32 totalItems = 2;
  optional int32 perPage = 3;
  optional int32 totalPages = 4;
  optional int32 page = 5;
  optional Skill data = 6;
}

message SkillListResponse {
  string message = 1;
  repeated Skill data = 2;
}